--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>trabajo</title>
+  <title>Mi primer web</title>
   <head>
     <body>
       <p>Manuel Jesus Reyes Vasquez</p>
